tests/ui/snapshots/names_value_as_type.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/names_value_as_type.ward
---
exit: Some(1)
--- human ---
[W0106] Error: `helper` is not a type
   ╭─[ tests/ui/names_value_as_type.ward:5:9 ]
   │
 5 │ fn f(x: helper) -> Int {
   │         ───┬──  
   │            ╰──── expected a type
───╯
error: could not check `tests/ui/names_value_as_type.ward` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0106",
      "file": "tests/ui/names_value_as_type.ward",
      "help": null,
      "labels": [
        {
          "message": "expected a type",
          "primary": true,
          "span": {
            "end": {
              "column": 15,
              "line": 5,
              "offset": 44
            },
            "start": {
              "column": 9,
              "line": 5,
              "offset": 38
            }
          }
        }
      ],
      "message": "`helper` is not a type",
      "severity": "error",
      "span": {
        "end": {
          "column": 15,
          "line": 5,
          "offset": 44
        },
        "start": {
          "column": 9,
          "line": 5,
          "offset": 38
        }
      }
    }
  ],
  "file": "tests/ui/names_value_as_type.ward"
}
