tests/ui/snapshots/ok_effects.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/ok_effects.ward
---
exit: Some(0)
--- human ---
ok: tests/ui/ok_effects.ward
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/ok_effects.ward"
}
