tests/ui/snapshots/ok_interfaces.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/ok_interfaces.ward
---
exit: Some(0)
--- human ---
ok: tests/ui/ok_interfaces.ward
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/ok_interfaces.ward"
}
