tests/ui/snapshots/ok_statements.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/ok_statements.wardscript
---
exit: Some(0)
--- human ---
ok: tests/ui/ok_statements.wardscript
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/ok_statements.wardscript"
}
