tests/ui/snapshots/ok_trust_fixed.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/ok_trust_fixed.ward
---
exit: Some(0)
--- human ---
ok: tests/ui/ok_trust_fixed.ward
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/ok_trust_fixed.ward"
}
