tests/ui/snapshots/ok_types_tour.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/ok_types_tour.ward
---
exit: Some(0)
--- human ---
ok: tests/ui/ok_types_tour.ward
--- json ---
{
  "diagnostics": [],
  "file": "tests/ui/ok_types_tour.ward"
}
